--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -241,7 +240,9 @@
             cursor: pointer;
             border-radius: 5px;
             transition: background-color 0.3s, transform 0.2s;
-            margin-top: 1em;
+            margin: 1em auto 0; /* Centra el botón horizontalmente */
+            display: block; /* Asegura que el botón se comporte como un bloque para centrar */
+            text-align: center;
         }
 
         .go-home:hover {
@@ -289,6 +290,21 @@
 
             .instagram-btn {
                 font-size: 1em;
+            }
+        }
+
+        /* Walker Buttons */
+        .walker-buttons {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1em; /* Espacio entre los botones */
+            margin: 1.5em 0;
+        }
+
+        @media (min-width: 480px) {
+            .walker-buttons {
+                flex-direction: row;
             }
         }
 
@@ -375,7 +391,7 @@
             <input type="number" id="dog-age" placeholder="Edad del perro" required min="0">
             <input type="text" id="dog-allergies" placeholder="Alergias del perro">
             <textarea id="dog-info" placeholder="Otra información importante (medicamentos, etc.)" rows="4"></textarea>
-            <button class="btn" id="register-button" onclick="registerOwner()">Registrar 📝</button>
+            <button class="btn" id="register-button">Registrar 📝</button>
         </div>
         <img src="https://i.imgur.com/zLB4ReI.png" alt="Perro registrado" style="width: 60%; max-width: 400px; margin-top: 1.5em; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
         <button class="go-home" onclick="showSection('landing-page')">Volver al inicio 🏠</button>
@@ -426,8 +442,10 @@
         <input type="text" id="walk-time" placeholder="Hora de inicio" required>
         <input type="tel" id="walker-owner-phone" placeholder="Número de WhatsApp del dueño" required>
 
-        <button class="btn" id="send-to-owner">Enviar al dueño 📤</button>
-        <button class="btn" id="send-to-amigoperro">Enviar a Amigo Perro 📤</button>
+        <div class="walker-buttons">
+            <button class="btn" id="send-to-owner">Enviar al dueño 📤</button>
+            <button class="btn" id="send-to-amigoperro">Enviar a Amigo Perro 📤</button>
+        </div>
 
         <button class="go-home" onclick="showSection('landing-page')">Volver al inicio 🏠</button>
     </section>
@@ -481,7 +499,7 @@
         }
 
         const message = `Paseador: ${walkerName}, Perro: ${dogName}, Punto de inicio: ${startLocation}, Hora: ${walkTime}.`;
-        const amigoPerroPhone = '525527204437'; // Replace with the correct WhatsApp number for Amigo Perro
+        const amigoPerroPhone = '525527204437'; // Reemplaza con el número de WhatsApp correcto para Amigo Perro
         const whatsappUrl = `https://wa.me/${amigoPerroPhone}?text=${encodeURIComponent(message)}`;
         window.open(whatsappUrl, '_blank');
     });
@@ -491,9 +509,9 @@
         const adminPassword = document.getElementById('admin-password').value;
         const adminPanel = document.getElementById('admin-panel');
 
-        if (adminPassword === 'admin123') { // Change this to a more secure mechanism
+        if (adminPassword === 'admin123') { // Cambia esto por un mecanismo más seguro
             adminPanel.style.display = 'block';
-            // Optionally, load admin data here
+            // Opcionalmente, carga los datos del administrador aquí
             loadAdminData();
         } else {
             alert("Contraseña incorrecta. Intenta de nuevo.");
@@ -503,7 +521,7 @@
     // Dummy function to load admin data
     function loadAdminData() {
         const walkerData = document.getElementById('walker-data');
-        // Example data, replace with actual data retrieval
+        // Datos de ejemplo, reemplaza con la recuperación de datos real
         const data = [
             { walker: 'Juan Pérez', dog: 'Rex', breed: 'Labrador', location: 'CDMX' },
             { walker: 'María López', dog: 'Luna', breed: 'Beagle', location: 'Guadalajara' },
@@ -539,11 +557,11 @@
             return;
         }
 
-        // Fake login logic (you can replace with real validation)
+        // Lógica de inicio de sesión falsa (puedes reemplazarla con una validación real)
         if (email === "owner@example.com") {
             loginStatus.style.color = "#5cb85c";
             loginStatus.textContent = "Iniciaste sesión correctamente.";
-            // Optionally, navigate to owner dashboard
+            // Opcionalmente, navega al panel del propietario
             // showSection('owner-dashboard');
         } else {
             loginStatus.style.color = "#d9534f";
@@ -568,13 +586,13 @@
             return;
         }
 
-        // Here you can add the logic to save the registration data
+        // Aquí puedes añadir la lógica para guardar los datos de registro
         alert("Registro exitoso! 📝");
 
-        // Clear the form
+        // Limpiar el formulario
         document.querySelector('.owner-registration').reset();
 
-        // Navigate back to landing page
+        // Navegar de vuelta a la página de inicio
         showSection('landing-page');
     }
 
