--- a/index.html
+++ b/index.html
@@ -351,11 +351,12 @@
         <img src="https://i.imgur.com/kSYS21o.png" alt="Perro con correa">
         <div>
             <button class="btn" onclick="showSection('owner-registration')">Registrar mi Perro 📝</button>
-            <button class="btn" onclick="showSection('admin-dashboard')">Ir al Administrador 🛠</button>
-            <button class="btn" onclick="showSection('walker-app')">Ir al Paseador 🐕‍🦺</button>
-            <button class="btn" onclick="showSection('registered-owners')">Ya estoy registrado 🔐</button>
+            
+            <button class="btn" onclick="showSection('registered-owners')">Iniciar Sesión 🔐</button>
             <button class="btn" onclick="showSection('about-us')">Conócenos 📋</button>
             <button class="btn" onclick="scheduleWalk()">Agendar Paseo 📅</button>
+          <button class="btn" onclick="showSection('admin-dashboard')">Administrador 🛠</button>
+            <button class="btn" onclick="showSection('walker-app')">Paseador 🐕‍🦺</button>
         </div>
     </section>
 
