--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
     <!-- Registered Owners Section -->
     <section id="registered-owners">
         <h2>Usuarios Registrados 🔐</h2>
-        <p>Inicia sesión para ver el estado de tu mascota 🐕‍🦺</p>
+        <p>Inicia sesión 🐕‍🦺</p>
         <input type="email" id="login-email" placeholder="Correo electrónico" required>
         <button class="btn" onclick="login()">Iniciar Sesión 🔑</button>
         <p id="login-status" style="margin-top: 1em; color: #d9534f;"></p>
