--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
             display: block;
             text-align: center; /* Asegura que el contenido esté centrado */
         }
+      
+      /* Centrar el botón "Ingresar" en la página de introducción */
+#intro-page .btn {
+    display: block;
+    margin: 1em auto 0; /* Centra horizontalmente y añade margen superior */
+}
+
 
         #intro-page img {
             width: 60%;
