--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>Regístrate y conecta con los mejores paseadores para tu mascota 🐕‍🦺</p>
             <img src="https://i.imgur.com/kSYS21o.png" alt="Perro con correa">
             <div>
-                <button class="btn" onclick="showSection('owner-registration')">Registrar mi Perro 📝</button>
+                <button class="btn" onclick="showSection('owner-registration')">Registrar a mi Amigo Perro 📝</button>
                 
                 <button class="btn" onclick="showSection('registered-owners')">Iniciar Sesión 🔐</button>
                 <button class="btn" onclick="showSection('about-us')">Conócenos 📋</button>
@@ -70,7 +70,7 @@
 
         <!-- Owner Registration Section -->
         <section id="owner-registration">
-            <h2>Registrar a mi perro 🐾</h2>
+            <h2>Registrar a mi Amigo Perro 🐾</h2>
             <div class="owner-registration">
                 <input type="text" id="owner-name" placeholder="Nombre del dueño" required>
                 <input type="email" id="owner-email" placeholder="Correo del dueño" required>
