--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Amigo Perro 🐾</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <meta name="google-site-verification" content="TfYp_LyD_qligVlnAlM5EGg0imEkcpTQFTnk2yafreo" />
 </head>
 <body>
 
